internal/proc.h
@@ -17,6 +17,7 @@ struct rb_iseq_struct;          /* in vm_core.h */
 /* proc.c */
 VALUE rb_proc_location(VALUE self);
 st_index_t rb_hash_proc(st_index_t hash, VALUE proc);
+int rb_block_pair_yield_optimizable(void);
 int rb_block_arity(void);
 int rb_block_min_max_arity(int *max);
 VALUE rb_block_to_s(VALUE self, const struct rb_block *block, const char *additional_info);
