spec/ruby/core/hash/shared/each.rb
@@ -21,19 +21,37 @@ describe :hash_each, shared: true do
     ary.sort.should == ["a", "b", "c"]
   end
 
-  it "yields 2 values and not an Array of 2 elements when given a callable of arity 2" do
-    obj = Object.new
-    def obj.foo(key, value)
-      ScratchPad << key << value
+  ruby_version_is ""..."2.8" do
+    it "yields 2 values and not an Array of 2 elements when given a callable of arity 2" do
+      obj = Object.new
+      def obj.foo(key, value)
+        ScratchPad << key << value
+      end
+
+      ScratchPad.record([])
+      { "a" => 1 }.send(@method, &obj.method(:foo))
+      ScratchPad.recorded.should == ["a", 1]
+
+      ScratchPad.record([])
+      { "a" => 1 }.send(@method, &-> key, value { ScratchPad << key << value })
+      ScratchPad.recorded.should == ["a", 1]
     end
+  end
 
-    ScratchPad.record([])
-    { "a" => 1 }.send(@method, &obj.method(:foo))
-    ScratchPad.recorded.should == ["a", 1]
+  ruby_version_is "2.8" do
+    it "yields an Array of 2 elements when given a callable of arity 2" do
+      obj = Object.new
+      def obj.foo(key, value)
+      end
 
-    ScratchPad.record([])
-    { "a" => 1 }.send(@method, &-> key, value { ScratchPad << key << value })
-    ScratchPad.recorded.should == ["a", 1]
+      -> {
+        { "a" => 1 }.send(@method, &obj.method(:foo))
+      }.should raise_error(ArgumentError)
+
+      -> {
+        { "a" => 1 }.send(@method, &-> key, value { })
+      }.should raise_error(ArgumentError)
+    end
   end
 
   it "uses the same order as keys() and values()" do
